Added a raycast processing model replicating Lee et al.

--- a/coltra/notebooks/unity_steps.ipynb
+++ b/coltra/notebooks/unity_steps.ipynb
@@ -3,15 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "organized-authorization",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, '..')\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "from envs import UnitySimpleCrowdEnv\n",
+    "from coltra.envs import UnitySimpleCrowdEnv\n",
     "\n",
     "from tqdm import trange, tqdm"
    ]
@@ -19,6 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "early-webmaster",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "impossible-locking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +39,72 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "protected-cannon",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ObservationSpec(shape=(5, 4), dimension_property=(<DimensionProperty.UNSPECIFIED: 0>, <DimensionProperty.UNSPECIFIED: 0>), observation_type=<ObservationType.DEFAULT: 0>),\n",
+       " ObservationSpec(shape=(126,), dimension_property=(<DimensionProperty.UNSPECIFIED: 0>,), observation_type=<ObservationType.DEFAULT: 0>),\n",
+       " ObservationSpec(shape=(4,), dimension_property=(<DimensionProperty.UNSPECIFIED: 0>,), observation_type=<ObservationType.DEFAULT: 0>)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.unity.behavior_specs['Person1?team=0'].observation_specs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "committed-consultancy",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(126,)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs['Person1?team=0&id=1'].rays.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "treated-nylon",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "126 / 3 / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "environmental-difference",
    "metadata": {},
    "outputs": [
     {
@@ -57,6 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "average-sweden",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "metropolitan-stand",
    "metadata": {},
    "outputs": [
     {
@@ -86,6 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "hispanic-means",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -93,6 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "flush-montgomery",
    "metadata": {},
    "outputs": [
     {
@@ -113,6 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "emotional-winner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,6 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "fresh-section",
    "metadata": {},
    "outputs": [
     {
@@ -142,6 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "hawaiian-thunder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,6 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "steady-experience",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,6 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "biblical-original",
    "metadata": {},
    "outputs": [
     {
@@ -317,6 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "rural-adjustment",
    "metadata": {},
    "outputs": [
     {
@@ -338,6 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "romantic-local",
    "metadata": {},
    "outputs": [
     {
@@ -359,6 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "fifty-resolution",
    "metadata": {},
    "outputs": [
     {
@@ -412,6 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "periodic-spread",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,6 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "realistic-bread",
    "metadata": {},
    "outputs": [
     {
@@ -445,6 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "swedish-recorder",
    "metadata": {},
    "outputs": [
     {
@@ -465,6 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "linear-summit",
    "metadata": {},
    "outputs": [
     {
@@ -490,6 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "introductory-tattoo",
    "metadata": {},
    "outputs": [
     {
@@ -559,6 +644,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "identical-jerusalem",
    "metadata": {},
    "source": [
     "TODO: test if it works well with normally-ended episodes"
@@ -567,6 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "nonprofit-honolulu",
    "metadata": {},
    "outputs": [
     {
@@ -588,6 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "crucial-inflation",
    "metadata": {},
    "outputs": [
     {
@@ -608,6 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "radical-prerequisite",
    "metadata": {},
    "outputs": [
     {
@@ -647,6 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "spatial-cosmetic",
    "metadata": {},
    "outputs": [
     {
@@ -668,6 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "legitimate-capitol",
    "metadata": {},
    "outputs": [
     {
@@ -686,6 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "interested-harvey",
    "metadata": {},
    "outputs": [
     {
@@ -753,6 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "fourth-knock",
    "metadata": {},
    "outputs": [
     {
