Pretty major update, now the board layout and the number of agents can be controlled from python

--- a/coltra/notebooks/unity_steps.ipynb
+++ b/coltra/notebooks/unity_steps.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "organized-authorization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +10,7 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "from coltra.envs import UnitySimpleCrowdEnv\n",
+    "from coltra.envs.unity_envs import UnitySimpleCrowdEnv, Mode\n",
     "\n",
     "from tqdm import trange, tqdm"
    ]
@@ -19,7 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "early-webmaster",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +26,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "impossible-locking",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = env.reset()"
+    "obs = env.reset(mode=Mode.Circle, num_agents=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(obs.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [00:05<00:00,  9.06it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in trange(50):\n",
+    "    env.step({})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "protected-cannon",
    "metadata": {},
    "outputs": [
     {
@@ -61,8 +95,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import IntSlider"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "id": "committed-consultancy",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +125,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "treated-nylon",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +145,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "environmental-difference",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +165,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "average-sweden",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +174,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "metropolitan-stand",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +194,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hispanic-means",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -164,7 +201,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "flush-montgomery",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +221,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "emotional-winner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +230,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fresh-section",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +250,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "hawaiian-thunder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +260,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "steady-experience",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +269,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "biblical-original",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +425,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "rural-adjustment",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +446,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "romantic-local",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +467,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fifty-resolution",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +520,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "periodic-spread",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +530,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "realistic-bread",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +553,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "swedish-recorder",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +573,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "linear-summit",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +598,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "introductory-tattoo",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +667,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "identical-jerusalem",
    "metadata": {},
    "source": [
     "TODO: test if it works well with normally-ended episodes"
@@ -653,7 +675,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "nonprofit-honolulu",
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +696,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "crucial-inflation",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +716,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "radical-prerequisite",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +755,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "spatial-cosmetic",
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +776,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "legitimate-capitol",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +794,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interested-harvey",
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +861,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "fourth-knock",
    "metadata": {},
    "outputs": [
     {
