Major update, added the relational model, hopefully it will work pls

--- a/coltra/notebooks/unity_steps.ipynb
+++ b/coltra/notebooks/unity_steps.ipynb
@@ -4,13 +4,26 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'coltra'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-7eb807198161>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcoltra\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menvs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munity_envs\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mUnitySimpleCrowdEnv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMode\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcoltra\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuffers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mObservation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'coltra'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "from coltra.envs.unity_envs import UnitySimpleCrowdEnv, Mode\n",
+    "from coltrat.envs.unity_envs import UnitySimpleCrowdEnv, Mode\n",
+    "from coltra.buffers import Observation, Action\n",
     "\n",
     "from tqdm import trange, tqdm"
    ]
@@ -26,11 +39,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = env.reset(mode=Mode.Circle, num_agents=50)"
+    "obs = env.reset(mode=Mode.Circle, num_agents=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.1142964,  2.6714835, -3.3995411,  2.7525132],\n",
+       "       [-4.899013 ,  0.2567126,  1.5676435,  4.08328  ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs[\"Person1?team=0&id=5\"].buffer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Σ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs, _, _, _ = env.step({key: Action(continuous=[1, 1]) for key in obs})"
    ]
   },
   {
@@ -39,36 +94,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "50"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(obs.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [00:05<00:00,  9.06it/s]\n"
+      "100%|██████████| 50/50 [00:05<00:00,  9.24it/s]\n"
      ]
     }
    ],
    "source": [
     "for _ in trange(50):\n",
-    "    env.step({})"
+    "    env.step({key: Action(continuous=[1, 0]) for key in obs})"
    ]
   },
   {
@@ -901,9 +936,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Poetry 3.8 (MARL)",
+   "display_name": "Python 3.8 (crowd)",
    "language": "python",
-   "name": "marl"
+   "name": "crowd"
   },
   "language_info": {
    "codemirror_mode": {
