A bunch of changes, mostly to the dynamics being now changeable from the Unity UI. Also support for discrete action agents on the Python side

--- a/coltra/notebooks/unity_steps.ipynb
+++ b/coltra/notebooks/unity_steps.ipynb
@@ -2,27 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'coltra'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-7eb807198161>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcoltra\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menvs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munity_envs\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mUnitySimpleCrowdEnv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMode\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcoltra\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuffers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mObservation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'coltra'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
+    "sys.path.insert(0, '../..')\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "from coltrat.envs.unity_envs import UnitySimpleCrowdEnv, Mode\n",
+    "from coltra.envs.unity_envs import UnitySimpleCrowdEnv, Mode\n",
     "from coltra.buffers import Observation, Action\n",
     "\n",
     "from tqdm import trange, tqdm"
@@ -30,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,44 +37,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo = obs[\"Person1?team=0&id=5\"].buffer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 4.1142964,  2.6714835, -3.3995411,  2.7525132],\n",
-       "       [-4.899013 ,  0.2567126,  1.5676435,  4.08328  ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ]], dtype=float32)"
+       "array([[-2.0576239 ,  0.6684713 ,  2.9378023 ,  4.042975  ],\n",
+       "       [ 2.0576258 ,  0.66847074, -2.9378006 ,  4.042976  ],\n",
+       "       [-3.3293066 ,  2.4185488 ,  4.753463  ,  1.5442783 ],\n",
+       "       [ 3.3293097 ,  2.4185486 , -4.7534614 ,  1.5442812 ]],\n",
+       "      dtype=float32)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "obs[\"Person1?team=0&id=5\"].buffer"
+    "foo[np.all(foo != 0., axis=1)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Σ"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obs, _, _, _ = env.step({key: Action(continuous=[1, 1]) for key in obs})"
+    "obs, _, _, _ = env.step({key: Action(continuous=[1, 0]) for key in obs})"
    ]
   },
   {
