--- a/coltra/notebooks/unity_steps.ipynb
+++ b/coltra/notebooks/unity_steps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,11 +28,161 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs = env.reset(mode=Mode.Random, num_agents=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 293.41it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in trange(1):\n",
+    "    obs, reward, done, info = env.step({key: Action(continuous=np.array([1, 0], dtype=np.float32)) for key in obs})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = env.reset(mode=Mode.Circle, num_agents=10)"
+    "obs, reward, done, info = env.step({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'final_obs': {},\n",
+       " 'final_rewards': {},\n",
+       " 'm_mean_dist': array([7.320864], dtype=float32),\n",
+       " 'm_mean_speed': array([3.65625], dtype=float32),\n",
+       " 'm_mean_finish': array([0.], dtype=float32),\n",
+       " 'm_mean_collision': array([0.], dtype=float32)}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=int32)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.unity.get_steps(\"Person1?team=0\")[1].agent_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Person1?team=0&id=0': False,\n",
+       " 'Person1?team=0&id=1': False,\n",
+       " 'Person1?team=0&id=2': False,\n",
+       " 'Person1?team=0&id=3': False,\n",
+       " 'Person1?team=0&id=4': False,\n",
+       " 'Person1?team=0&id=5': False,\n",
+       " 'Person1?team=0&id=6': False,\n",
+       " 'Person1?team=0&id=7': False,\n",
+       " 'Person1?team=0&id=8': False,\n",
+       " 'Person1?team=0&id=9': False,\n",
+       " '__all__': False}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo = obs['Person1?team=0&id=0'].buffer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.03 µs ± 286 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "foo[~np.all(foo==0, axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ObservationSpec(shape=(20, 4), dimension_property=(<DimensionProperty.VARIABLE_SIZE: 4>, <DimensionProperty.NONE: 1>), observation_type=<ObservationType.DEFAULT: 0>, name='BufferSensor'),\n",
+       " ObservationSpec(shape=(4,), dimension_property=(<DimensionProperty.UNSPECIFIED: 0>,), observation_type=<ObservationType.DEFAULT: 0>, name='VectorSensor_size4')]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.behaviors['Person1?team=0'][0]"
    ]
   },
   {
@@ -115,15 +265,6 @@
    ],
    "source": [
     "env.unity.behavior_specs['Person1?team=0'].observation_specs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipywidgets import IntSlider"
    ]
   },
   {
