Added gym training support, pending testing

--- a/coltra/notebooks/unity_steps.ipynb
+++ b/coltra/notebooks/unity_steps.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,20 +37,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Observation(vector=array([ 7.2778225e-01, -6.8069459e-03,  2.2938848e-01,  6.0877703e-02,\n",
+       "        1.4769284e-01,  0.0000000e+00,  3.1554437e-31], dtype=float32), rays=None, buffer=array([[ 0.3477507, -4.3603363,  0.       ,  0.       ],\n",
+       "       [-1.0393711, -4.7161703,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ]], dtype=float32), image=None)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs['Person1?team=0&id=0']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs = env.reset(mode=Mode.Random, num_agents=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 293.41it/s]\n"
+      "100%|██████████| 499/499 [00:50<00:00,  9.98it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Person1?team=0&id=0': False,\n",
+       " 'Person1?team=0&id=1': False,\n",
+       " 'Person1?team=0&id=2': False,\n",
+       " 'Person1?team=0&id=3': False,\n",
+       " 'Person1?team=0&id=4': False,\n",
+       " 'Person1?team=0&id=5': False,\n",
+       " 'Person1?team=0&id=6': False,\n",
+       " 'Person1?team=0&id=7': False,\n",
+       " 'Person1?team=0&id=8': False,\n",
+       " 'Person1?team=0&id=9': False,\n",
+       " '__all__': False}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for _ in trange(1):\n",
-    "    obs, reward, done, info = env.step({key: Action(continuous=np.array([1, 0], dtype=np.float32)) for key in obs})"
+    "for _ in trange(499):\n",
+    "    obs, reward, done, info = env.step({key: Action(continuous=np.array([1, 0], dtype=np.float32)) for key in obs})\n",
+    "\n",
+    "done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Person1?team=0&id=0': False,\n",
+       " 'Person1?team=0&id=1': False,\n",
+       " 'Person1?team=0&id=2': False,\n",
+       " 'Person1?team=0&id=3': False,\n",
+       " 'Person1?team=0&id=4': False,\n",
+       " 'Person1?team=0&id=5': False,\n",
+       " 'Person1?team=0&id=6': False,\n",
+       " 'Person1?team=0&id=7': False,\n",
+       " 'Person1?team=0&id=8': False,\n",
+       " 'Person1?team=0&id=9': False,\n",
+       " '__all__': False}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs, reward, done, info = env.step({key: Action(continuous=np.array([1, 0], dtype=np.float32)) for key in obs})\n",
+    "done\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Observation(vector=array([-0.44483376, -0.35713902,  0.7489439 ,  0.5184823 ,  0.53634524,\n",
+       "        0.        ,  0.        ], dtype=float32), rays=None, buffer=array([[ 7.2000446, -3.5510645,  0.       ,  0.       ],\n",
+       "       [10.40126  , -3.7088768,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+       "       [ 0.       ,  0.       ,  0.       ,  0.       ]], dtype=float32), image=None)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs['Person1?team=0&id=0']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Observation(vector=array([-6.6421545e-01,  9.4124997e-01,  6.8814874e-02, -5.7998925e-01,\n",
+       "        7.7684596e-02, -1.6689300e-07,  0.0000000e+00], dtype=float32), rays=None, buffer=array([[ 6.1287987e-01,  2.8284442e-01, -7.5767127e-07, -3.4966575e-07],\n",
+       "       [-2.3680830e+00, -1.4800711e+00, -3.8712994e-07,  8.3885033e-07],\n",
+       "       [ 6.1287987e-01,  2.8284442e-01, -7.5767127e-07, -3.4966575e-07],\n",
+       "       [-2.3680816e+00, -1.4800683e+00, -3.8712994e-07,  8.3885033e-07],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  0.0000000e+00]],\n",
+       "      dtype=float32), image=None)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info['final_obs']['Person1?team=0&id=0']"
    ]
   },
   {
