--- a/coltra/notebooks/unity_steps.ipynb
+++ b/coltra/notebooks/unity_steps.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,36 +37,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.set_timescale()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Observation(vector=array([ 7.2778225e-01, -6.8069459e-03,  2.2938848e-01,  6.0877703e-02,\n",
-       "        1.4769284e-01,  0.0000000e+00,  3.1554437e-31], dtype=float32), rays=None, buffer=array([[ 0.3477507, -4.3603363,  0.       ,  0.       ],\n",
-       "       [-1.0393711, -4.7161703,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
-       "       [ 0.       ,  0.       ,  0.       ,  0.       ]], dtype=float32), image=None)"
+       "Observation(vector=array([-0.73904604,  0.75586236,  0.06881487, -0.57998925,  0.0776846 ,\n",
+       "        0.        ,  0.        ], dtype=float32), rays=None, buffer=array([[0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.]], dtype=float32), image=None)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,23 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obs = env.reset(mode=Mode.Random, num_agents=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 499/499 [00:50<00:00,  9.98it/s]\n"
+      "100%|██████████| 499/499 [00:02<00:00, 209.03it/s]\n"
      ]
     },
     {
@@ -112,7 +112,7 @@
        " '__all__': False}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,33 +126,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Observation(vector=array([-0.44483376, -0.35713902,  0.7489439 ,  0.5184823 ,  0.53634524,\n",
+      "        0.        ,  0.        ], dtype=float32), rays=None, buffer=array([[ 7.2000446, -3.5510645,  0.       ,  0.       ],\n",
+      "       [10.40126  , -3.7088768,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ],\n",
+      "       [ 0.       ,  0.       ,  0.       ,  0.       ]], dtype=float32), image=None)\n",
+      "{'Person1?team=0&id=0': True, 'Person1?team=0&id=1': True, 'Person1?team=0&id=2': True, 'Person1?team=0&id=3': True, 'Person1?team=0&id=4': True, 'Person1?team=0&id=5': True, 'Person1?team=0&id=6': True, 'Person1?team=0&id=7': True, 'Person1?team=0&id=8': True, 'Person1?team=0&id=9': True, '__all__': True}\n",
+      "{'Person1?team=0&id=0': 0.0, 'Person1?team=0&id=1': 0.0, 'Person1?team=0&id=2': 0.0, 'Person1?team=0&id=3': 0.0, 'Person1?team=0&id=4': 0.0, 'Person1?team=0&id=5': 0.0, 'Person1?team=0&id=6': 0.0, 'Person1?team=0&id=7': 0.0, 'Person1?team=0&id=8': 0.0, 'Person1?team=0&id=9': 0.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "obs, reward, done, info = env.step({key: Action(continuous=np.array([1, 0], dtype=np.float32)) for key in obs})\n",
+    "print(obs[\"Person1?team=0&id=0\"])\n",
+    "print(done)\n",
+    "print(reward)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Person1?team=0&id=0': False,\n",
-       " 'Person1?team=0&id=1': False,\n",
-       " 'Person1?team=0&id=2': False,\n",
-       " 'Person1?team=0&id=3': False,\n",
-       " 'Person1?team=0&id=4': False,\n",
-       " 'Person1?team=0&id=5': False,\n",
-       " 'Person1?team=0&id=6': False,\n",
-       " 'Person1?team=0&id=7': False,\n",
-       " 'Person1?team=0&id=8': False,\n",
-       " 'Person1?team=0&id=9': False,\n",
-       " '__all__': False}"
+       "{'Person1?team=0&id=0': -0.09340038,\n",
+       " 'Person1?team=0&id=1': -0.09692269,\n",
+       " 'Person1?team=0&id=2': -0.08666573,\n",
+       " 'Person1?team=0&id=3': -0.017051125,\n",
+       " 'Person1?team=0&id=4': -0.06297207,\n",
+       " 'Person1?team=0&id=5': 0.005938721,\n",
+       " 'Person1?team=0&id=6': 0.07747803,\n",
+       " 'Person1?team=0&id=7': -0.04426689,\n",
+       " 'Person1?team=0&id=8': -0.09755363,\n",
+       " 'Person1?team=0&id=9': -0.036952782}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "obs, reward, done, info = env.step({key: Action(continuous=np.array([1, 0], dtype=np.float32)) for key in obs})\n",
-    "done\n"
+    "reward"
    ]
   },
   {
